--- a/styles.css
+++ b/styles.css
@@ -80,18 +80,96 @@ font-weight: 700;
     color: #FF42A5;
 }
 
+/* This is banner-section */
+.banner-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 1920px;
+    height: 700px;
+}
 
+
+.banner-text h3{
+    color: #0B0223;
+text-align: center;
+font-size: 48px;
+font-weight: 600;
+ text-transform: uppercase;
+ padding-top: 10px;
+}
+.banner-text h1{
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+background-clip: text;
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+font-size: 95px;
+font-weight: 800;
+line-height: normal;
+text-transform: uppercase;
+margin-top: -50px;
+}
+.banner-text p{
+    color: #534C64;
+font-size: 20px;
+font-weight: 500;
+line-height: normal;
+
+}
+ .para{
+    margin-top: -50px;
+   margin-left: 20px;
+} 
+.button-container{
+    display: flex;
+    gap: 20px;
+}
+.btn-1{
+    color: #FFF;
+font-size: 20px;
+font-weight: 600;
+text-transform: uppercase;
+display: inline-flex;
+padding: 21px 40px;
+align-items: flex-start;
+gap: 10px;
+border-radius: 48px;
+background:  linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%);
+border: 0;
+}
+.btn-2{
+    color: #FFF;
+font-size: 20px;
+font-weight: 600;
+text-transform: uppercase;
+display: inline-flex;
+padding: 21px 40px;
+align-items: flex-start;
+gap: 10px;
+border-radius: 48px;
+background: #4EC5F7;
+border: 0;
+}
 
 /* For mobile devices */
 
 @media screen and (max-width:425px) {
     
-    nav, .navbar-container{
+    nav,.banner-container, .navbar-container{
     flex-direction: column;
     width: 100%;
+    height: 100%;
     
 background: #FFF;
    } 
+   .banner-container{
+    padding-top: 50px;
+    background: #FFF;
+    flex-direction: column-reverse;
+   }
+   .section-img img{
+    width: 100%;
+   }
     .navbar-home{
     flex-direction: column;
    } 
@@ -99,9 +177,18 @@ background: #FFF;
 
 /* For Medium devices */
 @media screen and (min-width:425px) and (max-width:794px){
-    nav, .navbar-container{
+    nav,.banner-container, .navbar-container{
         width: 100%;
+        height: 100%;
         flex-direction: column;
         background: #FFF;
     }
+    .banner-container{
+        padding-top: 50px;
+        background: #FFF;
+        flex-direction: column-reverse;
+       }
+       .section-img img{
+        width: 100%;
+       }
 }
