--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,45 @@ background: #4EC5F7;
 border: 0;
 }
 
+/* This is online games section */
+.online-games-container{
+    margin-top: 100px;
+    width: auto;
+}
+.online-games-text{
+    text-align: center;
+}
+.online-games-text h3{
+    color: #0B0223;
+font-size: 48px;
+font-weight: 700;
+}
+.online-games-text p{
+    color: #534C64;
+font-size: 18px;
+font-weight: 400;
+margin-top: -30px;
+}
+.liner{
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+background-clip: text;
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+font-family: Work Sans;
+font-size: 48px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+.online-games-image{
+    display: flex;
+   /* justify-content: space-evenly; */
+   
+   padding-left: 240px;
+   gap: 30px;
+   margin-top: 50px;
+}
+
 /* For mobile devices */
 
 @media screen and (max-width:425px) {
@@ -172,7 +211,26 @@ background: #FFF;
    }
     .navbar-home{
     flex-direction: column;
+   }
+   .online-games-container{
+    width: 100%;
+    height: 100%;
+   }
+   .online-games-image{
+    flex-direction: column;
+    align-items: center;
+    padding: 50px;
+   }
+   .online-games-image img{
+    width: 100%;
    } 
+   .online-games-text{
+    width: 100%;
+   }
+   .online-games-text h3{
+    width: 100%;
+    
+   }
 }
 
 /* For Medium devices */
@@ -191,4 +249,23 @@ background: #FFF;
        .section-img img{
         width: 100%;
        }
+       .online-games-container{
+        width: 100%;
+        height: 100%;
+       }
+       .online-games-image{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        
+        align-items: center;
+        padding: 50px;
+       }
+       .online-games-image img{
+        width: 100%;
+       } 
+       .online-games-text{
+        width: 100%;
+       }
+       .online-games-text h3{
+        width: 100%;
 }
