--- a/styles.css
+++ b/styles.css
@@ -190,6 +190,55 @@ line-height: normal;
    margin-top: 50px;
 }
 
+/* This is fourth section */
+
+
+.imgg-1 img{
+    /* width: 710px;
+height: 650px; */
+border-radius: 8px;
+margin-left: 200px;
+}
+.imgg-2 img{
+    border-radius: 8px;
+border: 10px solid #FFF;
+/* width: 318px;
+height: 365px; */
+position: relative;
+margin-top: 420px;
+margin-left: -200px;
+
+}
+.fourth-section-image-container{
+    display: flex;
+}
+.fourth-section-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 150px;
+}
+.fourth-text{
+    color: #0B0223;
+font-family: Work Sans;
+font-size: 48px;
+font-style: normal;
+font-weight: 700;
+line-height: 60px;
+}
+.fourth-section-text p{
+    color: #534C64;
+    
+    font-size: 18px;
+   
+    font-weight: 400;
+    line-height: 30px; 
+}
+
+
+
+
+
 /* For mobile devices */
 
 @media screen and (max-width:425px) {
@@ -231,10 +280,29 @@ background: #FFF;
     width: 100%;
     
    }
+   .fourth-section-container{
+    flex-direction: column-reverse;
+    align-items: center;
+    text-align: center;
+    padding-left: 50px;
+    padding-right: 50px;
+   }
+ 
+.imgg-1 img{
+    margin-left: 0;
+    width: 100%;
+}
+.imgg-2 img{
+    width: 200%;
+    margin-top: 150px;
+    margin-left: -100px;
+   
+    padding: 0px;
+}
 }
 
 /* For Medium devices */
-@media screen and (min-width:425px) and (max-width:794px){
+@media screen and (min-width:426px) and (max-width:794px){
     nav,.banner-container, .navbar-container{
         width: 100%;
         height: 100%;
@@ -268,4 +336,24 @@ background: #FFF;
        }
        .online-games-text h3{
         width: 100%;
+} 
+.fourth-section-container{
+    flex-direction: column-reverse;
+    align-items: center;
+    text-align: center;
+    padding-left: 50px;
+    padding-right: 50px;
+    
+   }
+   .imgg-1 img{
+    margin-left: 0;
+    width: 100%;
+}
+.imgg-2 img{
+    width: 200%;
+    margin-top: 250px;
+    margin-left: -150px;
+   
+    padding: 0px;
+}
 }
