--- a/styles.css
+++ b/styles.css
@@ -428,11 +428,18 @@ background: #FFF;
     align-items: center;
     padding: 50px;
    }
+   .overlayy{
+    width: 100%;
+    height: 83%;
+   }
+   #bbt{
+    width: 50px;
+   }
    #bonus{
-       width: 100%;
+       
    }
    .online-games-image img{
-    /* width: 100%; */
+     width: 100%; 
    } 
    .online-games-text{
     width: 100%;
@@ -541,8 +548,16 @@ footer, .footer-container{
         padding: 50px;
        }
        .online-games-image img{
-        /* width: 100%; */
+         width: 100%; 
        } 
+       .overlayy{
+        width: 100%;
+        height: 83%;
+       }
+       #bbt{
+        width: 50px;
+       }
+       
        .online-games-text{
         width: 100%;
        }
